metodos de testes